--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,5 @@ theme-dark: false #Set to true to change to dark website theme
 plugins: [jekyll-paginate, kramdown]
 # Build settings
 markdown: kramdown
+
+theme: jekyll-theme-cayman
